--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Rubik&display=swap" rel="stylesheet">
-  <title>Learn to code</title>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet"><title>Learn to code</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="header">
+      <img src="./assets/logo-white_background.png"/>
+      <nav>
+        <a href="#">Log in</a>
+        <a href="#" class="btn-ghost">Start 7-day free trail</a>
+      </nav>
+    </div>
+  </div>
 </body>
 </html>
