--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         <a href="#" class="btn-ghost">Start 7-day free trail</a>
       </nav>
     </div>
+
+    <div class="banner">
+      <div>
+        <img src="./assets/mimo-illustration.png" alt="mimo illustration" class="logo-illustration"/>
+        <h1>Learning to code can be easy and fun!</h1>
+      </div>
+      <img src="./assets/illustration.png" alt="person coding" class="illustration"/>
+    </div>
   </div>
 </body>
 </html>
