--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet"><title>Learn to code</title>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
+  <title>Learn to code</title>
 </head>
 <body>
   <div class="container">
@@ -27,6 +28,40 @@
       </div>
       <img src="./assets/illustration.png" alt="person coding" class="illustration"/>
     </div>
-  </div>
+ 
+
+  <section>
+    <div class="card">
+      <img src="./assets/exercise-card.png" alt="exercise card background"/>
+      <div class="card-description">
+        <img src="./assets/bite-size.png"/>
+        <div>
+          <h3>Bite-sized exercise</h3>
+          <p>Complete bite-sized exercise with real code and immediate feedback</p>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <img src="./assets/playground-card.png" alt="exercise card background"/>
+      <div class="card-description">
+        <img src="./assets/code.png"/>
+        <div>
+          <h3>Bite-sized exercise</h3>
+          <p>Complete bite-sized exercise with real code and immediate feedback</p>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <img src="./assets/streaks-card.png" alt="exercise card background"/>
+      <div class="card-description">
+        <img src="./assets/streak.png"/>
+        <div>
+          <h3>Bite-sized exercise</h3>
+          <p>Complete bite-sized exercise with real code and immediate feedback</p>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
 </body>
 </html>
